tests/baselines/reference/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.errors.txt
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(32,12): error TS2365: Operator '<' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(): string; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(33,12): error TS2365: Operator '<' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(x: string): number; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(34,12): error TS2365: Operator '<' cannot be applied to types '{ fn<T>(x?: T): T; }' and '{ fn(x?: string): number; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(35,12): error TS2365: Operator '<' cannot be applied to types '{ fn<T>(...x: T[]): T; }' and '{ fn(...x: string[]): number; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(36,12): error TS2365: Operator '<' cannot be applied to types '{ fn<T>(x: T, y: T): T; }' and '{ fn(x: string, y: number): string; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(37,12): error TS2365: Operator '<' cannot be applied to types '{ fn<T, U extends T>(x: T, y: U): T; }' and '{ fn(x: Base, y: C): Base; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(39,12): error TS2365: Operator '<' cannot be applied to types '{ fn(): string; }' and '{ fn<T>(x: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(40,12): error TS2365: Operator '<' cannot be applied to types '{ fn(x: string): number; }' and '{ fn<T>(x: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(41,12): error TS2365: Operator '<' cannot be applied to types '{ fn(x?: string): number; }' and '{ fn<T>(x?: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(42,12): error TS2365: Operator '<' cannot be applied to types '{ fn(...x: string[]): number; }' and '{ fn<T>(...x: T[]): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(43,12): error TS2365: Operator '<' cannot be applied to types '{ fn(x: string, y: number): string; }' and '{ fn<T>(x: T, y: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(44,12): error TS2365: Operator '<' cannot be applied to types '{ fn(x: Base, y: C): Base; }' and '{ fn<T, U extends T>(x: T, y: U): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(47,12): error TS2365: Operator '>' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(): string; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(48,12): error TS2365: Operator '>' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(x: string): number; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(49,12): error TS2365: Operator '>' cannot be applied to types '{ fn<T>(x?: T): T; }' and '{ fn(x?: string): number; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(50,12): error TS2365: Operator '>' cannot be applied to types '{ fn<T>(...x: T[]): T; }' and '{ fn(...x: string[]): number; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(51,12): error TS2365: Operator '>' cannot be applied to types '{ fn<T>(x: T, y: T): T; }' and '{ fn(x: string, y: number): string; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(52,12): error TS2365: Operator '>' cannot be applied to types '{ fn<T, U extends T>(x: T, y: U): T; }' and '{ fn(x: Base, y: C): Base; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(54,12): error TS2365: Operator '>' cannot be applied to types '{ fn(): string; }' and '{ fn<T>(x: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(55,12): error TS2365: Operator '>' cannot be applied to types '{ fn(x: string): number; }' and '{ fn<T>(x: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(56,12): error TS2365: Operator '>' cannot be applied to types '{ fn(x?: string): number; }' and '{ fn<T>(x?: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(57,12): error TS2365: Operator '>' cannot be applied to types '{ fn(...x: string[]): number; }' and '{ fn<T>(...x: T[]): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(58,12): error TS2365: Operator '>' cannot be applied to types '{ fn(x: string, y: number): string; }' and '{ fn<T>(x: T, y: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(59,12): error TS2365: Operator '>' cannot be applied to types '{ fn(x: Base, y: C): Base; }' and '{ fn<T, U extends T>(x: T, y: U): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(62,12): error TS2365: Operator '<=' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(): string; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(63,12): error TS2365: Operator '<=' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(x: string): number; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(64,12): error TS2365: Operator '<=' cannot be applied to types '{ fn<T>(x?: T): T; }' and '{ fn(x?: string): number; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(65,12): error TS2365: Operator '<=' cannot be applied to types '{ fn<T>(...x: T[]): T; }' and '{ fn(...x: string[]): number; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(66,12): error TS2365: Operator '<=' cannot be applied to types '{ fn<T>(x: T, y: T): T; }' and '{ fn(x: string, y: number): string; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(67,12): error TS2365: Operator '<=' cannot be applied to types '{ fn<T, U extends T>(x: T, y: U): T; }' and '{ fn(x: Base, y: C): Base; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(69,12): error TS2365: Operator '<=' cannot be applied to types '{ fn(): string; }' and '{ fn<T>(x: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(70,12): error TS2365: Operator '<=' cannot be applied to types '{ fn(x: string): number; }' and '{ fn<T>(x: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(71,12): error TS2365: Operator '<=' cannot be applied to types '{ fn(x?: string): number; }' and '{ fn<T>(x?: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(72,12): error TS2365: Operator '<=' cannot be applied to types '{ fn(...x: string[]): number; }' and '{ fn<T>(...x: T[]): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(73,12): error TS2365: Operator '<=' cannot be applied to types '{ fn(x: string, y: number): string; }' and '{ fn<T>(x: T, y: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(74,12): error TS2365: Operator '<=' cannot be applied to types '{ fn(x: Base, y: C): Base; }' and '{ fn<T, U extends T>(x: T, y: U): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(77,12): error TS2365: Operator '>=' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(): string; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(78,12): error TS2365: Operator '>=' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(x: string): number; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(79,12): error TS2365: Operator '>=' cannot be applied to types '{ fn<T>(x?: T): T; }' and '{ fn(x?: string): number; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(80,12): error TS2365: Operator '>=' cannot be applied to types '{ fn<T>(...x: T[]): T; }' and '{ fn(...x: string[]): number; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(81,12): error TS2365: Operator '>=' cannot be applied to types '{ fn<T>(x: T, y: T): T; }' and '{ fn(x: string, y: number): string; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(82,12): error TS2365: Operator '>=' cannot be applied to types '{ fn<T, U extends T>(x: T, y: U): T; }' and '{ fn(x: Base, y: C): Base; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(84,12): error TS2365: Operator '>=' cannot be applied to types '{ fn(): string; }' and '{ fn<T>(x: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(85,12): error TS2365: Operator '>=' cannot be applied to types '{ fn(x: string): number; }' and '{ fn<T>(x: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(86,12): error TS2365: Operator '>=' cannot be applied to types '{ fn(x?: string): number; }' and '{ fn<T>(x?: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(87,12): error TS2365: Operator '>=' cannot be applied to types '{ fn(...x: string[]): number; }' and '{ fn<T>(...x: T[]): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(88,12): error TS2365: Operator '>=' cannot be applied to types '{ fn(x: string, y: number): string; }' and '{ fn<T>(x: T, y: T): T; }'.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(89,12): error TS2365: Operator '>=' cannot be applied to types '{ fn(x: Base, y: C): Base; }' and '{ fn<T, U extends T>(x: T, y: U): T; }'.


==== comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts (48 errors) ====
    class Base {
        public a: string;
    }
    
    class Derived extends Base {
        public b: string;
    }
    
    class C {
        public c: string;
    }
    
    var a1: { fn<T>(x: T): T };
    var b1: { fn(): string };
    
    var a2: { fn<T>(x: T): T };
    var b2: { fn(x: string): number };
    
    var a3: { fn<T>(x?: T): T };
    var b3: { fn(x?: string): number };
    
    var a4: { fn<T>(...x: T[]): T };
    var b4: { fn(...x: string[]): number };
    
    var a5: { fn<T>(x: T, y: T): T };
    var b5: { fn(x: string, y: number): string };
    
    var a6: { fn<T, U extends T>(x: T, y: U): T };
    var b6: { fn(x: Base, y: C): Base };
    
    // operator <
    var r1a1 = a1 < b1;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(): string; }'.
    var r1a2 = a2 < b2;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(x: string): number; }'.
    var r1a3 = a3 < b3;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ fn<T>(x?: T): T; }' and '{ fn(x?: string): number; }'.
    var r1a4 = a4 < b4;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ fn<T>(...x: T[]): T; }' and '{ fn(...x: string[]): number; }'.
    var r1a5 = a5 < b5;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ fn<T>(x: T, y: T): T; }' and '{ fn(x: string, y: number): string; }'.
    var r1a6 = a6 < b6;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ fn<T, U extends T>(x: T, y: U): T; }' and '{ fn(x: Base, y: C): Base; }'.
    
    var r1b1 = b1 < a1;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ fn(): string; }' and '{ fn<T>(x: T): T; }'.
    var r1b2 = b2 < a2;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ fn(x: string): number; }' and '{ fn<T>(x: T): T; }'.
    var r1b3 = b3 < a3;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ fn(x?: string): number; }' and '{ fn<T>(x?: T): T; }'.
    var r1b4 = b4 < a4;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ fn(...x: string[]): number; }' and '{ fn<T>(...x: T[]): T; }'.
    var r1b5 = b5 < a5;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ fn(x: string, y: number): string; }' and '{ fn<T>(x: T, y: T): T; }'.
    var r1b6 = b6 < a6;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ fn(x: Base, y: C): Base; }' and '{ fn<T, U extends T>(x: T, y: U): T; }'.
    
    // operator >
    var r2a1 = a1 > b1;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(): string; }'.
    var r2a2 = a2 > b2;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(x: string): number; }'.
    var r2a3 = a3 > b3;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ fn<T>(x?: T): T; }' and '{ fn(x?: string): number; }'.
    var r2a4 = a4 > b4;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ fn<T>(...x: T[]): T; }' and '{ fn(...x: string[]): number; }'.
    var r2a5 = a5 > b5;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ fn<T>(x: T, y: T): T; }' and '{ fn(x: string, y: number): string; }'.
    var r2a6 = a6 > b6;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ fn<T, U extends T>(x: T, y: U): T; }' and '{ fn(x: Base, y: C): Base; }'.
    
    var r2b1 = b1 > a1;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ fn(): string; }' and '{ fn<T>(x: T): T; }'.
    var r2b2 = b2 > a2;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ fn(x: string): number; }' and '{ fn<T>(x: T): T; }'.
    var r2b3 = b3 > a3;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ fn(x?: string): number; }' and '{ fn<T>(x?: T): T; }'.
    var r2b4 = b4 > a4;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ fn(...x: string[]): number; }' and '{ fn<T>(...x: T[]): T; }'.
    var r2b5 = b5 > a5;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ fn(x: string, y: number): string; }' and '{ fn<T>(x: T, y: T): T; }'.
    var r2b6 = b6 > a6;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ fn(x: Base, y: C): Base; }' and '{ fn<T, U extends T>(x: T, y: U): T; }'.
    
    // operator <=
    var r3a1 = a1 <= b1;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(): string; }'.
    var r3a2 = a2 <= b2;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(x: string): number; }'.
    var r3a3 = a3 <= b3;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ fn<T>(x?: T): T; }' and '{ fn(x?: string): number; }'.
    var r3a4 = a4 <= b4;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ fn<T>(...x: T[]): T; }' and '{ fn(...x: string[]): number; }'.
    var r3a5 = a5 <= b5;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ fn<T>(x: T, y: T): T; }' and '{ fn(x: string, y: number): string; }'.
    var r3a6 = a6 <= b6;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ fn<T, U extends T>(x: T, y: U): T; }' and '{ fn(x: Base, y: C): Base; }'.
    
    var r3b1 = b1 <= a1;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ fn(): string; }' and '{ fn<T>(x: T): T; }'.
    var r3b2 = b2 <= a2;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ fn(x: string): number; }' and '{ fn<T>(x: T): T; }'.
    var r3b3 = b3 <= a3;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ fn(x?: string): number; }' and '{ fn<T>(x?: T): T; }'.
    var r3b4 = b4 <= a4;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ fn(...x: string[]): number; }' and '{ fn<T>(...x: T[]): T; }'.
    var r3b5 = b5 <= a5;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ fn(x: string, y: number): string; }' and '{ fn<T>(x: T, y: T): T; }'.
    var r3b6 = b6 <= a6;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ fn(x: Base, y: C): Base; }' and '{ fn<T, U extends T>(x: T, y: U): T; }'.
    
    // operator >=
    var r4a1 = a1 >= b1;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(): string; }'.
    var r4a2 = a2 >= b2;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ fn<T>(x: T): T; }' and '{ fn(x: string): number; }'.
    var r4a3 = a3 >= b3;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ fn<T>(x?: T): T; }' and '{ fn(x?: string): number; }'.
    var r4a4 = a4 >= b4;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ fn<T>(...x: T[]): T; }' and '{ fn(...x: string[]): number; }'.
    var r4a5 = a5 >= b5;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ fn<T>(x: T, y: T): T; }' and '{ fn(x: string, y: number): string; }'.
    var r4a6 = a6 >= b6;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ fn<T, U extends T>(x: T, y: U): T; }' and '{ fn(x: Base, y: C): Base; }'.
    
    var r4b1 = b1 >= a1;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ fn(): string; }' and '{ fn<T>(x: T): T; }'.
    var r4b2 = b2 >= a2;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ fn(x: string): number; }' and '{ fn<T>(x: T): T; }'.
    var r4b3 = b3 >= a3;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ fn(x?: string): number; }' and '{ fn<T>(x?: T): T; }'.
    var r4b4 = b4 >= a4;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ fn(...x: string[]): number; }' and '{ fn<T>(...x: T[]): T; }'.
    var r4b5 = b5 >= a5;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ fn(x: string, y: number): string; }' and '{ fn<T>(x: T, y: T): T; }'.
    var r4b6 = b6 >= a6;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ fn(x: Base, y: C): Base; }' and '{ fn<T, U extends T>(x: T, y: U): T; }'.
    
    // operator ==
    var r5a1 = a1 == b1;
    var r5a2 = a2 == b2;
    var r5a3 = a3 == b3;
    var r5a4 = a4 == b4;
    var r5a5 = a5 == b5;
    var r5a6 = a6 == b6;
    
    var r5b1 = b1 == a1;
    var r5b2 = b2 == a2;
    var r5b3 = b3 == a3;
    var r5b4 = b4 == a4;
    var r5b5 = b5 == a5;
    var r5b6 = b6 == a6;
    
    // operator !=
    var r6a1 = a1 != b1;
    var r6a2 = a2 != b2;
    var r6a3 = a3 != b3;
    var r6a4 = a4 != b4;
    var r6a5 = a5 != b5;
    var r6a6 = a6 != b6;
    
    var r6b1 = b1 != a1;
    var r6b2 = b2 != a2;
    var r6b3 = b3 != a3;
    var r6b4 = b4 != a4;
    var r6b5 = b5 != a5;
    var r6b6 = b6 != a6;
    
    // operator ===
    var r7a1 = a1 === b1;
    var r7a2 = a2 === b2;
    var r7a3 = a3 === b3;
    var r7a4 = a4 === b4;
    var r7a5 = a5 === b5;
    var r7a6 = a6 === b6;
    
    var r7b1 = b1 === a1;
    var r7b2 = b2 === a2;
    var r7b3 = b3 === a3;
    var r7b4 = b4 === a4;
    var r7b5 = b5 === a5;
    var r7b6 = b6 === a6;
    
    // operator !==
    var r8a1 = a1 !== b1;
    var r8a2 = a2 !== b2;
    var r8a3 = a3 !== b3;
    var r8a4 = a4 !== b4;
    var r8a5 = a5 !== b5;
    var r8a6 = a6 !== b6;
    
    var r8b1 = b1 !== a1;
    var r8b2 = b2 !== a2;
    var r8b3 = b3 !== a3;
    var r8b4 = b4 !== a4;
    var r8b5 = b5 !== a5;
    var r8b6 = b6 !== a6;